<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewMessageActivity">

    <TextView
        android:id="@+id/managetextViewNewMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/newMessage_textView_manage"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/listViewNewMessages"
        android:layout_width="382dp"
        android:layout_height="443dp"
        android:layout_marginTop="12dp"
        android:listSelector="#61ADEA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/managetextViewNewMessage" />

    <TextView
        android:id="@+id/messageTextViewnewMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginBottom="4dp"
        android:text="@string/newMessage_textView_message"
        app:layout_constraintBottom_toTopOf="@+id/messageEditNewmessage"
        app:layout_constraintStart_toEndOf="@+id/textView16"
        app:layout_constraintTop_toBottomOf="@+id/modifyButtonNewMessage" />

    <EditText
        android:id="@+id/messageEditNewmessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/addButtonNewMessage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.556"
        app:layout_constraintStart_toEndOf="@+id/codeEditNewMessage" />

    <EditText
        android:id="@+id/codeEditNewMessage"
        android:layout_width="47dp"
        android:layout_height="46dp"
        android:layout_marginStart="56dp"
        android:layout_marginBottom="32dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/addButtonNewMessage"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/addButtonNewMessage"
        android:layout_width="110dp"
        android:layout_height="45dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#61ADEA"
        android:text="@string/newMessage_button_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginBottom="4dp"
        android:text="@string/newMessage_textView_code"
        app:layout_constraintBottom_toTopOf="@+id/codeEditNewMessage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modifyButtonNewMessage" />

    <Button
        android:id="@+id/deleteButtonNewMessages"
        android:layout_width="107dp"
        android:layout_height="41dp"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#5E0A0A"
        android:text="@string/newMessage_button_delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/addButtonNewMessage"
        app:layout_constraintHorizontal_bias="0.152"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/modifyButtonNewMessage"
        android:layout_width="82dp"
        android:layout_height="38dp"
        android:layout_marginStart="16dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/newMessage_button_modify"
        android:textColor="#000000"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listViewNewMessages" />

    <ImageButton
        android:id="@+id/recognizeButtonNewMessages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listViewNewMessages"
        app:srcCompat="@drawable/microphone" />

</androidx.constraintlayout.widget.ConstraintLayout>